# brightnessControler

./: .gitignore  CMakeLists.txt  Makefile
.cache/clangd/index/: main.cpp.7DE320F5AE9EC1DE.idx
scripts/: main.cpp
